dto w/ modelmetter (canceled)